# tutorial-intro-saxsmodeling

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
context/: Initial_Fit_ReadME.txt  saxs_tutorial_section1.tex
docs/: index.md
docs/appendix/: exercise-solutions.md  remote-ssh.md
docs/javascripts/: copy.js
docs/section1-setup/: 1-why-python.md  2-installing-uv.md  3-virtual-environments.md  4-git-github.md  5-ssh-keys.md  6-vscode-jupyter.md  7-first-commit.md  index.md
docs/section2-sphere/: 1-what-is-saxs.md  2-scattering-length-density.md  3-sphere-form-factor.md  4-q-vectors-numpy.md  5-plotting-loglog.md  6-effect-of-size.md  7-polydispersity.md  8-commit-checkpoint.md  index.md
docs/section3-fitting/: 1-chi-squared.md  2-interpreting-results.md  3-fitting-saxs.md  index.md
docs/section3-shells/: 1-core-shell-model.md  2-multiple-shells.md  3-hollow-sphere.md  4-vesicle-connection.md  index.md
docs/section4-gaussian/: 1-why-gaussian.md  3-form-factor-from-profile.md  4-comparing-to-shell-model.md  index.md
docs/section4-shells/: 1-core-shell-model.md  2-multiple-shells.md  3-hollow-sphere.md  4-vesicle-connection.md  index.md
docs/section5-gaussian/: 1-why-gaussian.md  2-building-the-profile.md  3-form-factor-from-profile.md  4-comparing-to-shell-model.md  5-asymmetric-bilayer.md  index.md
docs/stylesheets/: extra.css
